name:                hslua-contrib
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sgraf812/hslua-contrib#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2015 Sebastian Graf
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scripting.Lua.Contrib
                     , Scripting.Lua.Contrib.Example
  build-depends:       base >= 4.7 && < 5
                     , hslua
                     , transformers
                     , mtl
                     , exceptions
                     , tagged
                     , text
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgraf812/hslua-contrib
